--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -23,7 +23,7 @@ env:
 jobs:
   test-app:
     runs-on: ubuntu-latest
-    container: golang:$GO_VERSION
+    container: golang:${{ env.GO_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -64,7 +64,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/amd64,linux/arm64
           build-args: |
-            APP_VERSION=${{ $GITHUB_SHA }}
-            GO_VERSION=${{ $GO_VERSION }}
+            APP_VERSION=$GITHUB_SHA
+            GO_VERSION=${{ env.GO_VERSION }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
