--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -23,7 +23,9 @@ env:
 jobs:
   test-app:
     runs-on: ubuntu-latest
-    container: golang:$GO_VERSION
+    # Github Action not support env var in image tag
+    # https://github.com/orgs/community/discussions/26324
+    container: golang:1.21
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,6 +37,7 @@ jobs:
 
   build-and-push-images:
     runs-on: ubuntu-latest
+    needs: [test-app]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
